--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 class="bi bi-thermometer-half">&nbsp;</i><span>Celsius (&deg;C)</span></label>
             <input type="text" class="form-control suhu" name="inputKonversi" id="inputKonversi"
               aria-describedby="inputHelp" data-degree="C">
-            <div id="inputHelp" class="form-text">Pisahkan desimal dengan tanda koma (,)</div>
+            <div id="inputHelp" class="form-text">Pisahkan desimal dengan tanda titik (.)</div>
           </div>
           <div class="p-2 flex-shrink-1">
             <div class="d-flex flex-column">
